customized & add init scripts